--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Lives</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>|
+    !-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello movies fragment</string>
 </resources>
