--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,7 @@
         <item>我喜欢</item>
     </array>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="navigation_drawer_close">Hello blank fragment</string>
-    <string name="navigation_drawer_open">Hello blank fragment</string>
+    <string name="error">请 检 查 网 络 或 者 下 拉 刷 新</string>
+    <string name="more">更多</string>
+
 </resources>
