图书分类完成，修改报名类型

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
         <item>我喜欢</item>
     </array>
 
-    <array name="image_classify_tab">
+    <array name="books_classify_tab">
         <item>分类</item>
         <item>生活杂谈</item>
         <item>家庭教育</item>
