应用中图书模块基本完成，后续还会进行优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
 
     <string name="classify">分类图书</string>
     <string name="recommend">推荐图书</string>
+
+    <string name="brief">简介</string>
 </resources>
